--- a/app/src/main/res/layout/activity_display_events.xml
+++ b/app/src/main/res/layout/activity_display_events.xml
@@ -14,23 +14,28 @@
             android:id="@+id/imageViewDisplay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="8dp"
             tools:srcCompat="@tools:sample/avatars">
         </ImageView>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textViewTitle"
-            android:textSize="30sp"
+            android:textSize="35sp"
             android:text="TITLE"
+            android:textStyle="bold"
             android:textAlignment="center"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="10dp"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textViewDescription"
-            android:textSize="30sp"
+            android:textSize="25sp"
             android:text="Description"
+            android:fontFamily="sans-serif-medium"
             android:textAlignment="center"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"/>
