--- a/app/src/main/res/layout/fragment_navigation_contact_us.xml
+++ b/app/src/main/res/layout/fragment_navigation_contact_us.xml
@@ -2,82 +2,140 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="8dp"
+    android:background="@drawable/contact_background"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        app:cardCornerRadius="15dp"
-        android:layout_margin="8dp">
-        <LinearLayout
+        android:layout_height="300dp"
+        android:layout_margin="40dp"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="4dp"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        >
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:background="#1A237E">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:fontFamily="sans-serif-condensed"
-                android:text="Reach us at"
-                android:textSize="30dp"
-                android:textColor="#ffffff"
-                android:layout_gravity="center_horizontal"/>
+            >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:id="@+id/reach"
+            android:text="Reach Us At"
+            android:layout_centerHorizontal="true"
+            android:textSize="30dp"
+            android:textStyle="bold"/>
+
             <androidx.cardview.widget.CardView
+                android:layout_width="220dp"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_below="@id/reach"
+                android:layout_margin="8dp"
+                android:id="@+id/facebook"
+                app:cardElevation="8dp"
+                app:cardCornerRadius="8dp">
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="15dp"
-                android:layout_margin="10dp">
+                android:orientation="horizontal"
+                >
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:padding="4dp"
+                    android:src="@drawable/facebook"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
+                    android:fontFamily="sans-serif-medium"
+                    android:textStyle="italic"
+                    android:textSize="16dp"
+                    android:text="\@acm.iitismdhn"/>
+
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_width="220dp"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_margin="8dp"
+                android:layout_below="@id/facebook"
+                android:id="@+id/youtube"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="8dp">
+
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:background="#ffffff">
+
+                    >
                     <ImageView
-                        android:id="@+id/facebook"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:src="@drawable/facebook"
-                        android:layout_margin="8dp"/>
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:padding="4dp"
+                        android:src="@drawable/youtube"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
+                        android:padding="2dp"
+                        android:fontFamily="sans-serif-medium"
+                        android:textStyle="italic"
+                        android:textSize="14dp"
+                        android:text="ACM Student Chapter IIT Dhanbad" />
+
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
+                android:layout_width="220dp"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="15dp"
-                android:layout_margin="10dp">
+                android:layout_below="@id/youtube"
+                android:layout_centerInParent="true"
+                android:layout_margin="8dp"
+                android:id="@+id/linkedin"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="8dp">
+
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:background="#ffffff">
+                    >
                     <ImageView
-                        android:id="@+id/youtube"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:src="@drawable/youtube"
-                        android:layout_margin="8dp"/>
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:padding="4dp"
+                        android:src="@drawable/linkedin"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
+                        android:fontFamily="sans-serif-medium"
+                        android:textStyle="italic"
+                        android:textSize="14dp"
+                        android:text="\@acm-student-chapter-iit-ism-dhanbad/"/>
+
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="15dp"
-                android:layout_margin="10dp">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:background="#ffffff">
-                    <ImageView
-                        android:id="@+id/linkedin"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:src="@drawable/linkedin"
-                        android:layout_margin="8dp"/>
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-        </LinearLayout>
+        </RelativeLayout>
+
 
     </androidx.cardview.widget.CardView>
+
+
 </RelativeLayout>
