--- a/app/src/main/res/layout/fragment_navigation_home.xml
+++ b/app/src/main/res/layout/fragment_navigation_home.xml
@@ -7,26 +7,31 @@
     android:scrollbars="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_blue_dark">
+    android:background="#fff">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
+        android:orientation="vertical"
+        >
         <ImageView
             android:id="@+id/image1"
             android:layout_width="match_parent"
             android:layout_height="262dp"
-            android:src="@drawable/youtube"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"/>
+            android:src="@drawable/iit_dhanbad"
+            android:layout_marginLeft="1dp"
+            android:layout_marginRight="1dp"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
+            android:elevation="4dp"
+            />
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView1"
             android:layout_below="@+id/image1"
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
             android:layout_margin="15dp"
-            app:cardCornerRadius="5dp">
+            app:cardCornerRadius="8dp"
+            app:cardElevation="8dp">
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -41,7 +46,7 @@
                     android:textStyle="bold"
                     android:layout_marginBottom="2dp"/>
                 <TextView
-                    android:padding="5dp"
+                    android:padding="8dp"
                     android:textSize="18sp"
                     android:fontFamily="sans-serif-condensed"
                     android:textStyle="italic"
@@ -62,13 +67,23 @@ dedicated to projects and research"
                     />
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/image2"
+            android:layout_below="@id/cardView1"
+            android:src="@drawable/acm"
+            android:elevation="4dp"/>
+
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView2"
-            android:layout_below="@+id/cardView1"
+            android:layout_below="@+id/image2"
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
             android:layout_margin="15dp"
-            app:cardCornerRadius="5dp">
+            app:cardCornerRadius="8dp"
+            app:cardElevation="8dp">
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -83,7 +98,7 @@ dedicated to projects and research"
                     android:textStyle="bold"
                     android:layout_marginBottom="2dp"/>
                 <TextView
-                    android:padding="5dp"
+                    android:padding="8dp"
                     android:textSize="18sp"
                     android:textStyle="italic"
                     android:fontFamily="sans-serif-condensed"
