--- a/app/src/main/res/layout/fragment_recent_events.xml
+++ b/app/src/main/res/layout/fragment_recent_events.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".recent_events"
-    android:background="#00ff">
+    android:background="#f2f2f2">
 
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
@@ -12,4 +12,11 @@
        android:id="@+id/recyclerView">
 
    </androidx.recyclerview.widget.RecyclerView>
+
+   <ProgressBar
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:id="@+id/progressBar"
+       android:layout_centerInParent="true"
+       android:visibility="gone"/>
 </RelativeLayout>
