--- a/app/src/main/res/layout/menu_parent_item.xml
+++ b/app/src/main/res/layout/menu_parent_item.xml
@@ -7,11 +7,13 @@
         android:layout_height="wrap_content"
         android:id="@+id/textParent"
         android:text="Parent Item"
-        android:textColor="@android:color/black"
+
         android:paddingLeft="45dp"
         android:paddingStart="45dp"
         android:paddingTop="16dp"
         android:paddingBottom="16dp"
+        android:textStyle="bold"
+        android:textSize="16dp"
         />
 
 </LinearLayout>
