--- a/app/src/main/res/layout/activity_display_events.xml
+++ b/app/src/main/res/layout/activity_display_events.xml
@@ -15,6 +15,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
+            android:elevation="4dp"
+            android:outlineAmbientShadowColor="@color/colorPrimaryDark"
+            android:outlineProvider="bounds"
             tools:srcCompat="@tools:sample/avatars">
         </ImageView>
 
@@ -22,23 +25,37 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textViewTitle"
-            android:textSize="35sp"
+            android:textSize="32sp"
             android:text="TITLE"
             android:textStyle="bold"
             android:textAlignment="center"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"/>
+            android:font="@style/TextAppearance.AppCompat.Headline"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            />
 
+
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_gravity="center"
+            app:cardElevation="2dp"
+            app:cardCornerRadius="8dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textViewDescription"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:text="Description"
-            android:fontFamily="sans-serif-medium"
+            android:padding="16dp"
+            android:fontFamily="sans-serif"
             android:textAlignment="center"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"/>
+            />
+        </com.google.android.material.card.MaterialCardView>
 
     </LinearLayout>
 </ScrollView>
