--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
 
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
-    android:background="#fece2f">
+    android:background="#fff">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -14,8 +14,8 @@
         android:id="@+id/logo_id"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="150dp"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:src="@drawable/acm"/>
         <androidx.cardview.widget.CardView
             android:id="@+id/des"
@@ -38,6 +38,6 @@
                 android:textSize="22sp" />
         </androidx.cardview.widget.CardView>
     </RelativeLayout>
-
+</RelativeLayout>
 
 
