--- a/app/src/main/res/layout/fragment_navigation_contact_us.xml
+++ b/app/src/main/res/layout/fragment_navigation_contact_us.xml
@@ -2,7 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="8dp"
     android:background="@drawable/contact_background"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -21,15 +20,15 @@
             android:layout_height="match_parent"
             >
 
-        <TextView
+        <com.hanks.htextview.HTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:id="@+id/reach"
-            android:text="Reach Us At"
             android:layout_centerHorizontal="true"
-            android:textSize="30dp"
-            android:textStyle="bold"/>
+            android:textSize="30sp"
+            android:textStyle="bold"
+            app:animateType="typer"/>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="220dp"
