--- a/app/src/main/res/layout/fragment_navigation_event.xml
+++ b/app/src/main/res/layout/fragment_navigation_event.xml
@@ -4,15 +4,15 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
         android:id="@+id/appBar"
         android:background="#ffffff">
     <com.google.android.material.tabs.TabLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
+        android:elevation="4dp"
         android:id="@+id/tabLayout">
 
     </com.google.android.material.tabs.TabLayout>
