--- a/app/src/main/res/layout/fragment_navigation_home.xml
+++ b/app/src/main/res/layout/fragment_navigation_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_above="@+id/bottom_navigation"
@@ -7,114 +7,78 @@
     android:scrollbars="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    android:background="#448AFF">
-
-    <RelativeLayout
+    android:background="#f2f2f2"
+    >
+    <View
+        android:id="@+id/anc_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
-        <ImageView
-            android:id="@+id/image1"
-            android:layout_width="match_parent"
-            android:layout_height="262dp"
-            android:src="@drawable/iit_dhanbad"
-            android:layout_marginLeft="1dp"
-            android:layout_marginRight="1dp"
-            android:paddingTop="16dp"
-            android:paddingBottom="16dp"
-            android:elevation="4dp"
-            />
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView1"
-            android:layout_below="@+id/image1"
-            android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:layout_margin="15dp"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="8dp">
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <TextView
-                    android:id="@+id/about"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="About Institution"
-                    android:layout_centerHorizontal="true"
-                    android:fontFamily="sans-serif-condensed"
-                    android:textSize="30sp"
-                    android:textStyle="bold"
-                    android:layout_marginBottom="2dp"/>
-                <TextView
-                    android:padding="8dp"
-                    android:textSize="18sp"
-                    android:fontFamily="sans-serif-condensed"
-                    android:textStyle="italic"
-                    android:layout_width="match_parent"
-                    android:layout_height="fill_parent"
-                    android:layout_below="@+id/about"
-                    android:text="IIT(ISM) is one of the oldest institution in India established
-in year 1926. It was established on the line of Royal School of Mines-London under the name
-Indian School of Mines located in Dhanbad, Coal Capital of India.\n\nIndian School of Mines started
-started by offering Mining Engineering. Applied Geology, Applied Physics, Applied Chemistry
-Applied Mathematics and gradually started offering core courses of Computer Science, Electrical,
-Electronics etc expanding from Earth Science to technical side.\n\nLater in year 2016, Indian
-School of Mines is awarded the tag of an IIT and renamed as Indian Institute of Technology
-(Indian School of Mines) Dhanbad.\n\nWith a clear intent of the institution to improve the
-amount of research an d projects in the Institution. It has invested most of it's resources
-dedicated to projects and research"
+        android:layout_height="36dp"
+        android:elevation="8dp"
+        android:background="@drawable/toolbar_background"/>
 
-                    />
-            </RelativeLayout>
-        </androidx.cardview.widget.CardView>
-
-        <ImageView
-            android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:baselineAligned="false"
+        android:elevation="8dp"
+        android:orientation="horizontal"
+        app:layout_anchor="@id/anc_view"
+        app:layout_anchorGravity="bottom">
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/image2"
-            android:layout_below="@id/cardView1"
-            android:src="@drawable/acm"
-            android:elevation="4dp"/>
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_achievements"
+                android:backgroundTint="#fff"
+                android:src="@drawable/ic_baseline_achivements_24"
+                android:layout_width="72dp"
+                android:layout_height="72dp"
+                android:layout_margin="10dp"
+                app:borderWidth="0dp"
+                app:fabCustomSize="72dp"
+                app:maxImageSize="36dp"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_events"
+                android:backgroundTint="#fff"
+                android:src="@drawable/ic_baseline_event_note_24"
+                android:layout_width="72dp"
+                android:layout_height="72dp"
+                android:layout_margin="10dp"
+                app:borderWidth="0dp"
+                app:fabCustomSize="72dp"
+                app:maxImageSize="36dp"
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView2"
-            android:layout_below="@+id/image2"
-            android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:layout_margin="15dp"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="8dp">
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <TextView
-                    android:id="@+id/aboutACM"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="About ACM"
-                    android:layout_centerHorizontal="true"
-                    android:fontFamily="sans-serif-condensed"
-                    android:textSize="30sp"
-                    android:textStyle="bold"
-                    android:layout_marginBottom="2dp"/>
-                <TextView
-                    android:padding="8dp"
-                    android:textSize="18sp"
-                    android:textStyle="italic"
-                    android:fontFamily="sans-serif-condensed"
-                    android:layout_width="match_parent"
-                    android:layout_height="fill_parent"
-                    android:layout_below="@+id/aboutACM"
-                    android:text="IIT(ISM) Dhanbad ACM student chapter was established in 2011
-under th aegis of Department of Computer Science and Engineering IIT(ISM) Dhanbad.\n\nThe chapter
-aims at serving as a dynamic hub of activities for the computing fraternity of IIT(ISM) Dhanbad
-, where enthusiasts meet, interact and learn from each other.\n\n
-The chapter organizes various events which includes hackathons, technical workshops, talks by
-renowned speakers and coding competitions catering to 1500+ enthusiasts.\n\nWith over 1400 paid
-members, our chapter is one of the biggest student chapters in India."/>
-            </RelativeLayout>
-        </androidx.cardview.widget.CardView>
-    </RelativeLayout>
-</ScrollView>
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_team"
+                android:backgroundTint="#fff"
+                android:src="@drawable/ic_baseline_team_24"
+                android:layout_width="72dp"
+                android:layout_height="72dp"
+                android:layout_margin="10dp"
+                app:borderWidth="0dp"
+                app:fabCustomSize="72dp"
+                app:maxImageSize="36dp"
+                />
+        </LinearLayout>
+    </LinearLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
