--- a/app/src/main/res/layout/fragment_navigation_team.xml
+++ b/app/src/main/res/layout/fragment_navigation_team.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#448AFF">
+    android:background="#f2f2f2">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewTeam"
@@ -12,4 +12,4 @@
         android:padding="4dp"
         android:scrollbars="vertical"/>
 
-</ScrollView>
+</RelativeLayout>
