--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -9,7 +9,17 @@
         android:id="@+id/navigation_home"
         android:name="com.example.acm.navigation_home"
         android:label="Home"
-        tools:layout="@layout/fragment_navigation_home" />
+        tools:layout="@layout/fragment_navigation_home" >
+        <action
+            android:id="@+id/action_navigation_home_to_navigation_achievements"
+            app:destination="@id/navigation_achievements" />
+        <action
+            android:id="@+id/action_navigation_home_to_navigation_event"
+            app:destination="@id/navigation_event" />
+        <action
+            android:id="@+id/action_navigation_home_to_navigation_team"
+            app:destination="@id/navigation_team" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_team"
@@ -31,4 +41,9 @@
         android:name="com.example.acm.navigation_sponcors"
         android:label="Sponcors"
         tools:layout="@layout/fragment_navigation_sponcors" />
+    <fragment
+        android:id="@+id/navigation_achievements"
+        android:name="com.example.acm.navigation_achievements"
+        android:label="Achievements"
+        tools:layout="@layout/fragment_navigation_achievements" />
 </navigation>
