--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#020aa8</color>
+    <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#020aa8</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorDots">#1A237E</color>
