--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light">
-        <item name="android:textColorPrimary">@android:color/white</item>
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+
 
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
