--- a/app/src/main/res/layout/fragment_navigation_home.xml
+++ b/app/src/main/res/layout/fragment_navigation_home.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_above="@+id/bottom_navigation"
     android:id="@+id/scrollView"
-    android:scrollbars="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f2f2f2"
-    >
+    android:scrollbars="vertical"
+    android:background="#f2f2f2">
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+
+        android:layout_above="@+id/bottom_navigation"
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#f2f2f2"
+        >
     <View
         android:id="@+id/anc_view"
         android:layout_width="match_parent"
@@ -17,6 +26,7 @@
         android:background="@drawable/toolbar_background"/>
 
     <LinearLayout
+        android:id="@+id/menuLinear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -80,5 +90,162 @@
                 app:maxImageSize="36dp"
                 />
         </LinearLayout>
+
     </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <androidx.cardview.widget.CardView
+            android:id="@+id/aboutCard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
+            android:layout_marginLeft="7dp"
+            android:layout_marginBottom="7dp"
+            android:layout_marginRight="7dp"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="7dp"
+            >
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/aboutACMHeader"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="About ACM"
+                android:textColor="#000000"
+                android:layout_centerHorizontal="true"
+                android:fontFamily="sans-serif-condensed"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:layout_marginBottom="2dp"/>
+            <TextView
+                android:layout_below="@+id/aboutACMHeader"
+                android:padding="7dp"
+                android:fontFamily="sans-serif-condensed"
+                android:textSize="18sp"
+                android:textColor="#000000"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="IIT(ISM) Dhanbad ACM student chapter was established in 2011
+under th aegis of Department of Computer Science and Engineering IIT(ISM) Dhanbad.\n\nThe chapter
+aims at serving as a dynamic hub of activities for the computing fraternity of IIT(ISM) Dhanbad
+, where enthusiasts meet, interact and learn from each other"/>
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:layout_below="@+id/aboutCard"
+            android:id="@+id/cardCarousel"
+
+            android:layout_width="match_parent"
+            android:layout_height="255dp"
+            android:layout_margin="7dp"
+            app:cardElevation="7dp"
+            app:cardCornerRadius="5dp">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <TextView
+                    android:id="@+id/title1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Recent Events organised by our ACM club"
+                    android:layout_centerHorizontal="true"
+                    android:textColor="#000000"
+                    android:fontFamily="sans-serif-condensed"
+                    android:textStyle="bold"
+                    android:textSize="20dp"
+                    android:padding="5dp"/>
+                <com.synnapps.carouselview.CarouselView
+                    android:layout_margin="5dp"
+                    android:layout_below="@+id/title1"
+                    android:id="@+id/carouselView"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    app:fillColor="#FFFFFFFF"
+                    app:pageColor="#00000000"
+                    app:radius="6dp"
+                    app:slideInterval="3000"
+                    app:strokeColor="#FF777777"
+                    app:strokeWidth="1dp"/>
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:layout_below="@id/cardCarousel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="7dp"
+            app:cardElevation="7dp"
+            app:cardCornerRadius="5dp">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <TextView
+                    android:id="@+id/title3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Some recent achievements"
+                    android:textColor="#000000"
+                    android:fontFamily="sans-serif-condensed"
+                    android:textStyle="bold"
+                    android:layout_centerHorizontal="true"
+                    android:textSize="22sp"
+                    android:padding="5dp"/>
+                <LinearLayout
+                    android:padding="7dp"
+                    android:id="@+id/layoutAchive"
+                    android:layout_below="@+id/title3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_weight="1"
+                        android:id="@+id/title4"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="1.Teams qualified for  ICPC Asia-West Continent Final:-\n
+\n a) Team Astralix \n
+b) Team One_Last_Time"
+                        android:fontFamily="sans-serif-condensed"
+                        android:textColor="#000000"
+                        android:textSize="18sp"
+                        android:padding="5dp"/>
+                    <TextView
+                        android:layout_weight="1"
+                        android:id="@+id/title5"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="2. Some of the Teams qualified for ICPC Regionals \n\n
+ a) Skullcandy:(Kanpur, Amritapuri)\n
+ b) Mushroom Boys:(Amritapuri)"
+                        android:textColor="#000000"
+                        android:fontFamily="sans-serif-condensed"
+                        android:textSize="18sp"
+                        android:padding="5dp"/>
+                </LinearLayout>
+                <TextView
+                    android:padding="7dp"
+                    android:layout_below="@+id/layoutAchive"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Students selected for Google Summer of Code (GSoC) -2020 from IIT (ISM) Dhanbad:\n
+1. Abhinav Bajpai (DD CSE)\n
+2. Naveen Jain (CSE)\n
+3. Rishabh Agarwal ( M&amp;C)\n
+4. Dhrubojyoti Biswas (M&amp;C)\n
+5. Rahul Katiyar (M.Tech CSE)"
+                    android:textSize="18sp"
+                    android:fontFamily="sans-serif-condensed"
+                    android:textColor="#000000"/>
+
+            </RelativeLayout>
+            
+        </androidx.cardview.widget.CardView>
+
+
+
+    </RelativeLayout>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
+</ScrollView>
