--- a/app/src/main/res/layout/exampleforteam.xml
+++ b/app/src/main/res/layout/exampleforteam.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_margin="10dp"
-    card_view:cardElevation="5dp"
+    card_view:cardElevation="10dp"
     app:cardCornerRadius="10dp">
     <RelativeLayout
         android:layout_width="match_parent"
@@ -18,6 +18,7 @@
             android:padding="2dp"
             android:layout_margin="8dp"/>
         <ImageView
+            android:id="@+id/logoEmail"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_below="@+id/photo"
@@ -47,6 +48,15 @@
             android:layout_toRightOf="@+id/photo"
             android:textColor="#1A237E"
             android:layout_margin="5dp"/>
+        <ImageView
+            android:id="@+id/logoLinkedIn"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="8dp"
+            android:src="@drawable/linkedin"
+            android:layout_below="@+id/photo"
+            android:layout_alignParentRight="true"
+            />
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
