--- a/app/src/main/res/layout/fragment_navigation_achievements.xml
+++ b/app/src/main/res/layout/fragment_navigation_achievements.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f2f2f2"
     tools:context=".navigation_achievements">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Achievements"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:textSize="30sp"/>
+        android:id="@+id/recycler_view">
+    </androidx.recyclerview.widget.RecyclerView>
 
-</FrameLayout>
+    <ProgressBar
+        android:id="@+id/content_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone">
+    </ProgressBar>
+
+</RelativeLayout>
