--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,45 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/relativeLayoutOnBoard"
+    android:background="#FC9D9D"
     tools:context=".MainActivity">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/slideViewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="82dp"></androidx.viewpager.widget.ViewPager>
+        android:layout_height="match_parent"></androidx.viewpager.widget.ViewPager>
 
-    <LinearLayout
-        android:id="@+id/dotsView"
-        android:layout_width="105dp"
-        android:layout_height="82dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:orientation="horizontal"
-        android:padding="20dp"></LinearLayout>
 
     <Button
         android:id="@+id/previous_button"
         android:layout_width="wrap_content"
-        android:layout_height="82dp"
+        android:layout_marginLeft="11dp"
+        android:layout_marginBottom="9dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="false"
         android:layout_alignParentBottom="true"
-        android:layout_margin="5dp"
-        android:background="@android:color/transparent"
+        android:background="#FC9D9D"
         android:text="Previous"
-        android:textColor="#1A237E"
-        android:textSize="18sp"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
         android:visibility="invisible" />
 
     <Button
         android:id="@+id/next_button"
         android:layout_width="wrap_content"
-        android:layout_height="82dp"
-        android:layout_margin="5dp"
+        android:layout_marginRight="29dp"
+        android:layout_marginBottom="9dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:background="@android:color/transparent"
+        android:background="#FC9D9D"
         android:text="Next"
-        android:textColor="#1A237E"
-        android:textSize="18sp" />
+        android:textColor="#FFFFFF"
+        android:textSize="16sp" />
 </RelativeLayout>
