--- a/app/src/main/res/layout/exampleforteam.xml
+++ b/app/src/main/res/layout/exampleforteam.xml
@@ -1,84 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_margin="10dp"
-    >
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/photo"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
-        android:padding="2dp"
-        android:layout_margin="10dp"
-        app:civ_border_width="4dp"
-        app:civ_border_color="#fff"
-        android:elevation="8dp"/>
-
-    <TextView
-        android:id="@+id/nameTeam"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:padding="5dp"
-        android:layout_toRightOf="@+id/photo"
-        android:fontFamily="sans-serif"
-        android:textColor="#000"
-        android:text="Name"
-        android:textSize="20sp"/>
-
-    <TextView
-        android:id="@+id/position"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Position"
-        android:fontFamily="sans-serif"
-        android:textSize="18sp"
-        android:layout_below="@+id/nameTeam"
-        android:layout_toRightOf="@+id/photo"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:padding="5dp"/>
-
-    <LinearLayout
+    card_view:cardElevation="10dp"
+    app:cardCornerRadius="10dp">
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_below="@id/position"
-        android:layout_toRightOf="@id/photo"
-        android:layout_toEndOf="@id/photo"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp">
-
-    <ImageView
-        android:id="@+id/team_fb"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:padding="2dp"
-        android:layout_margin="5dp"
-        android:src="@drawable/facebookteam"
-        />
-
-    <ImageView
-        android:id="@+id/team_linkedin"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:padding="2dp"
-        android:layout_margin="5dp"
-        android:src="@drawable/linkedinteam"
-        />
-
+        android:layout_height="match_parent"
+        android:layout_margin="10dp">
         <ImageView
-            android:id="@+id/team_mail"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:id="@+id/photo"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:padding="2dp"
+            android:layout_margin="8dp"/>
+        <ImageButton
+            android:id="@+id/logoEmail"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_below="@+id/photo"
+            android:layout_margin="8dp"
+            android:src="@drawable/gmail"/>
+        <TextView
+            android:id="@+id/position"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="position"
+            android:textSize="24sp"
+            android:fontFamily="sans-serif-condensed"
+            android:textStyle="bold"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/photo"
             android:layout_margin="5dp"
-            android:paddingTop="2dp"
-            android:src="@drawable/ic_baseline_email_24" />
+            android:textColor="#1A237E"/>
+        <TextView
+            android:id="@+id/nameTeam"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name"
+            android:fontFamily="sans-serif-condensed"
+            android:textSize="22sp"
+            android:textStyle="normal"
+            android:layout_below="@+id/position"
+            android:layout_toRightOf="@+id/photo"
+            android:textColor="#1A237E"
+            android:layout_margin="5dp"/>
+        <ImageButton
+            android:id="@+id/logoLinkedIn"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="8dp"
+            android:src="@drawable/linkedin"
+            android:layout_below="@+id/photo"
+            android:layout_alignParentRight="true"
+            />
+    </RelativeLayout>
 
-    </LinearLayout>
-</RelativeLayout>
+</androidx.cardview.widget.CardView>
