--- a/app/src/main/res/layout/slide_layout.xml
+++ b/app/src/main/res/layout/slide_layout.xml
@@ -8,35 +8,8 @@
 
     <ImageView
         android:id="@+id/slideViewImage"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/events_logo"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"/>
-    <TextView
-        android:id="@+id/tag"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/slideViewImage"
-        android:text="Heading"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:textColor="#1A237E"
-        android:fontFamily="sans-serif-condensed"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"/>
-    <TextView
-        android:id="@+id/slideDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tag"
-        android:text="Description"
-        android:textSize="30sp"
-        android:textColor="#1A237E"
-        android:fontFamily="cursive"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="24dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/onboardevents"/>
 
 </RelativeLayout>
