--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -11,14 +11,14 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/slideViewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></androidx.viewpager.widget.ViewPager>
-
+        android:layout_height="match_parent">
+    </androidx.viewpager.widget.ViewPager>
 
     <Button
         android:id="@+id/previous_button"
         android:layout_width="wrap_content"
-        android:layout_marginLeft="11dp"
-        android:layout_marginBottom="9dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginBottom="25dp"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="false"
         android:layout_alignParentBottom="true"
@@ -32,7 +32,7 @@
         android:id="@+id/next_button"
         android:layout_width="wrap_content"
         android:layout_marginRight="29dp"
-        android:layout_marginBottom="9dp"
+        android:layout_marginBottom="25dp"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
