--- a/app/src/main/res/layout/fragment_navigation_contact_us.xml
+++ b/app/src/main/res/layout/fragment_navigation_contact_us.xml
@@ -7,7 +7,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="wrap_content"
         android:layout_margin="40dp"
         app:cardCornerRadius="16dp"
         app:cardElevation="4dp"
@@ -131,6 +131,41 @@
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="220dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/linkedin"
+                android:layout_centerInParent="true"
+                android:layout_margin="8dp"
+                android:id="@+id/instagram"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="8dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    >
+                    <ImageView
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:padding="4dp"
+                        android:src="@drawable/instagram"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
+                        android:fontFamily="sans-serif-medium"
+                        android:textStyle="italic"
+                        android:textSize="14dp"
+                        android:text="acm_iitism"/>
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
         </RelativeLayout>
 
 
