--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -12,7 +12,7 @@
     android:paddingLeft="24dp"
     android:paddingEnd="16dp"
     android:paddingRight="16dp"
-    android:theme="@style/AppTheme"
+    android:theme="@style/AppTheme.ActionBar"
     app:popupTheme="@style/AppTheme"
     android:elevation="8dp"
     >
