--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -11,14 +11,14 @@
         android:label="Home"
         tools:layout="@layout/fragment_navigation_home" >
         <action
-            android:id="@+id/action_navigation_home_to_navigation_achievements"
-            app:destination="@id/navigation_achievements" />
-        <action
             android:id="@+id/action_navigation_home_to_navigation_event"
             app:destination="@id/navigation_event" />
         <action
             android:id="@+id/action_navigation_home_to_navigation_team"
             app:destination="@id/navigation_team" />
+        <action
+            android:id="@+id/action_navigation_home_to_navigation_benefits"
+            app:destination="@id/navigation_benefits" />
     </fragment>
 
     <fragment
@@ -46,4 +46,9 @@
         android:name="com.example.acm.navigation_achievements"
         android:label="Achievements"
         tools:layout="@layout/fragment_navigation_achievements" />
+    <fragment
+        android:id="@+id/navigation_benefits"
+        android:name="com.example.acm.navigation_benefits"
+        android:label="Benefits"
+        tools:layout="@layout/fragment_navigation_benefits" />
 </navigation>
