--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -90,8 +90,8 @@
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/google_signin"
-        android:layout_width="120dp"
-        android:layout_height="52dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:layout_below="@id/textViewForgotPassword"
