--- a/app/src/main/res/layout/fragment_navigation_home.xml
+++ b/app/src/main/res/layout/fragment_navigation_home.xml
@@ -136,9 +136,15 @@
                 android:textSize="20sp"
                 android:textStyle="bold"/>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:weightSum="2" >
+
             <RelativeLayout
                 android:id="@+id/contact1"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
                 android:orientation="vertical">
@@ -221,7 +227,8 @@
 
             <RelativeLayout
                 android:id="@+id/contact2"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@id/contact1"
                 android:background="@android:color/transparent"
@@ -302,9 +309,9 @@
                     />
 
             </RelativeLayout>
-
-
+            </LinearLayout>
         </RelativeLayout>
+
 
 
             <RelativeLayout
