--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.acm.navigation_home"
+        android:name="com.acmiitism.acm.navigation_home"
         android:label="Home"
         tools:layout="@layout/fragment_navigation_home" >
         <action
@@ -23,32 +23,32 @@
 
     <fragment
         android:id="@+id/navigation_team"
-        android:name="com.example.acm.navigation_team"
+        android:name="com.acmiitism.acm.navigation_team"
         android:label="Team"
         tools:layout="@layout/fragment_navigation_team" />
     <fragment
         android:id="@+id/navigation_contact_us"
-        android:name="com.example.acm.navigation_contact_us"
+        android:name="com.acmiitism.acm.navigation_contact_us"
         android:label="Contact Us"
         tools:layout="@layout/fragment_navigation_contact_us" />
     <fragment
         android:id="@+id/navigation_event"
-        android:name="com.example.acm.navigation_event"
+        android:name="com.acmiitism.acm.navigation_event"
         android:label="Events"
         tools:layout="@layout/fragment_navigation_event" />
     <fragment
         android:id="@+id/navigation_sponcors"
-        android:name="com.example.acm.navigation_sponcors"
-        android:label="Sponcors"
+        android:name="com.acmiitism.acm.navigation_sponcors"
+        android:label="Sponsors"
         tools:layout="@layout/fragment_navigation_sponcors" />
     <fragment
         android:id="@+id/navigation_achievements"
-        android:name="com.example.acm.navigation_achievements"
+        android:name="com.acmiitism.acm.navigation_achievements"
         android:label="Achievements"
         tools:layout="@layout/fragment_navigation_achievements" />
     <fragment
         android:id="@+id/navigation_benefits"
-        android:name="com.example.acm.navigation_benefits"
+        android:name="com.acmiitism.acm.navigation_benefits"
         android:label="Benefits"
         tools:layout="@layout/fragment_navigation_benefits" />
 </navigation>
